--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
+       #   personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/.vitepress/dist
       #    cname: your-custom-domain.com # 如果有自定义域名，取消注释并填写
-      #    branch: gh-pages # 指定部署的目标分支  
+          branch: gh-pages # 指定部署的目标分支  
